@@ -49,6 +49,7 @@ public:
     int getU8();
     int lookaheadU8();
     int readBytes(uint8_t* buf, int reqSize, bool& isErrorOccured);
+    int readSome(uint8_t** buf, bool& isErrorOccured);
     int open();
     int close();
     int fileNo() const;
